--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     
     <!-- CHANGED: Meta tags are now in English -->
-    <title>TFOOO - Play the Best Free Online Games</title>
-    <meta name="description" content="TFOOO is your new destination for thousands of free online games. Playable instantly on desktop, tablet, and mobile, discover hours of fun with no downloads or registration required.">
-    <meta name="keywords" content="free games, online games, browser games, html5 games, fun games, TFOOO games">
+    <title>kidgas - Play the Best Free Online Games</title>
+    <meta name="description" content="kidgas is your new destination for thousands of free online games. Playable instantly on desktop, tablet, and mobile, discover hours of fun with no downloads or registration required.">
+    <meta name="keywords" content="free games, online games, browser games, html5 games, fun games, kidgas games">
     
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +42,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <!-- Le "o" du milieu a maintenant une classe spéciale pour le style -->
 <!-- UTILISEZ CECI À LA PLACE -->
 <a href="index.html" class="logo-link">
-    <img src="fto.png" alt="TFOOO Logo" class="logo-image">
+    <img src="fto.png" alt="kidgas Logo" class="logo-image">
 </a>
 
             <div class="search-container">
@@ -70,10 +70,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-container">
             <div class="footer-about">
                 <!-- CHANGED: Site name updated -->
-                <h3 class="logo-footer">TFOOO</h3>
+                <h3 class="logo-footer">kidgas</h3>
                 <!-- CHANGED: Footer description translated -->
                 <p class="footer-description">
-                    TFOOO is your new destination for thousands of free online games. Playable instantly on desktop, tablet, and mobile, discover hours of fun with no downloads or registration required.
+                    kidgas is your new destination for thousands of free online games. Playable instantly on desktop, tablet, and mobile, discover hours of fun with no downloads or registration required.
                 </p>
             </div>
             <div class="footer-links">
@@ -102,7 +102,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-social-bar">
             <div class="footer-container social-container">
                 <!-- CHANGED: Copyright translated -->
-                <p>&copy; 2025 TFOOO. All rights reserved.</p>
+                <p>&copy; 2025 kidgas All rights reserved.</p>
                 <div class="social-icons">
                     <a href="#" target="_blank" title="YouTube"><svg viewBox="0 0 24 24"><path d="M10,15L15.19,12L10,9V15M21.56,7.17C21.69,7.64 21.78,8.27 21.84,9.07C21.91,9.87 21.94,10.56 21.94,11.16L22,12C22,14.19 21.84,15.8 21.56,16.83C21.31,17.73 20.73,18.31 19.83,18.56C19.36,18.69 18.73,18.78 17.93,18.84C17.13,18.91 16.44,18.94 15.84,18.94L15,19C12.81,19 11.2,18.84 10.17,18.56C9.27,18.31 8.69,17.73 8.44,16.83C8.31,16.36 8.22,15.73 8.16,14.93C8.09,14.13 8.06,13.44 8.06,12.84L8,12C8,9.81 8.16,8.2 8.44,7.17C8.69,6.27 9.27,5.69 10.17,5.44C11.2,5.16 12.81,5 15,5L15.84,5.06C16.44,5.06 17.13,5.09 17.93,5.16C18.73,5.22 19.36,5.31 19.83,5.44C20.73,5.69 21.31,6.27 21.56,7.17Z" /></svg></a>
                     <a href="#" target="_blank" title="X (Twitter)"><svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" /></svg></a>
@@ -123,4 +123,5 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
