--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 <button type="submit">Search</button>
 </form>
 <div class="auth">
-<a class="auth-link" href="/contact.html" rel="nofollow">Login</a>
-<a class="btn primary" href="/contact.html" rel="nofollow">Sign up</a>
+<a class="btn primary" href="/contact.html" rel="nofollow">Publish</a>
 </div>
 </div>
 <div class="subbar">
@@ -94,6 +93,12 @@
 </div>
 </header>
 <div class="container" style="margin-top:14px">
+        <section class="hero">
+<p class="kicker">Free Browser Games</p>
+<h1>Play Free Games Online on Kidgas</h1>
+<p>Welcome to <strong>Kidgas</strong>, your place to play hand‑picked browser games instantly. Choose a category, launch a game in one click, and discover new favorites through smart recommendations.</p>
+</section>
+        
 <div class="ad-slot leaderboard">
 <div class="ad-label">Advertisement</div>
 <div class="ad-box">
@@ -111,11 +116,7 @@
 </div>
 </div>
 </div>
-<section class="hero">
-<p class="kicker">Free Browser Games</p>
-<h1>Play Free Games Online on Kidgas</h1>
-<p>Welcome to <strong>Kidgas</strong>, your place to play hand‑picked browser games instantly. Choose a category, launch a game in one click, and discover new favorites through smart recommendations.</p>
-</section>
+
 <section aria-label="Highlights" class="hero-tiles">
 <a class="tile big" href="/new.html">
 <div class="tile-inner">
