--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                                         src="/images/basketballstars.png" />
                                 <div class="game-card-title">Basketball Stars</div>
                         </a><a aria-label="Play Big Red Button" class="game-card tall"
-                                href="https://i.ytimg.com/vi/BtYlSBw6T0s/maxresdefault.jpg"><img alt="Big Red Button thumbnail" loading="lazy"
-                                        src="/images/classroom.png" />
+                                href="/games/big-red-button.html"><img alt="Big Red Button thumbnail" loading="lazy"
+                                        src="https://i.ytimg.com/vi/BtYlSBw6T0s/maxresdefault.jpg" />
                                 <div class="game-card-title">Big Red Button</div>
                         </a><a aria-label="Play Bitlife" class="game-card" href="/games/bitlife.html"><img
                                         alt="Bitlife thumbnail" loading="lazy" src="/images/bitlife.png" />
@@ -245,8 +245,8 @@
                         </a><a aria-label="Play Donkey Kong" class="game-card" href="/games/donkey-kong.html"><img
                                         alt="Donkey Kong thumbnail" loading="lazy" src="/images/donkeykong.png" />
                                 <div class="game-card-title">Donkey Kong</div>
-                        </a><a aria-label="Play Doom" class="game-card" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsnsI3w2xT7-Xzdaagevlrfr8bR5fxB9TtbQ&s"><img
-                                        alt="Doom thumbnail" loading="lazy" src="/images/classroom.png" />
+                        </a><a aria-label="Play Doom" class="game-card" href="/games/doom.html"><img
+                                        alt="Doom thumbnail" loading="lazy" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsnsI3w2xT7-Xzdaagevlrfr8bR5fxB9TtbQ&s" />
                                 <div class="game-card-title">Doom</div>
                         </a><a aria-label="Play Draw the Hill" class="game-card" href="/games/draw-the-hill.html"><img
                                         alt="Draw the Hill thumbnail" loading="lazy" src="/images/drawthehill.png" />
@@ -321,8 +321,8 @@
                         </a><a aria-label="Play Google" class="game-card" href="/games/google.html"><img
                                         alt="Google thumbnail" loading="lazy" src="/images/google.png" />
                                 <div class="game-card-title">Google</div>
-                        </a><a aria-label="Play Google Fued" class="game-card" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSz62ZS4OoOwOXrWwxPohWXbGgh6CYRQ3GIzQ&s"><img
-                                        alt="Google Fued thumbnail" loading="lazy" src="/images/classroom.png" />
+                        </a><a aria-label="Play Google Fued" class="game-card" href="/games/google-fued.html"><img
+                                        alt="Google Fued thumbnail" loading="lazy" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSz62ZS4OoOwOXrWwxPohWXbGgh6CYRQ3GIzQ&s" />
                                 <div class="game-card-title">Google Fued</div>
                         </a><a aria-label="Play Google Snake" class="game-card" href="/games/google-snake.html"><img
                                         alt="Google Snake thumbnail" loading="lazy" src="/images/googlesnake.png" />
@@ -346,8 +346,8 @@
                         </a><a aria-label="Play Idle Breakout" class="game-card" href="/games/idle-breakout.html"><img
                                         alt="Idle Breakout thumbnail" loading="lazy" src="/images/idlebreakout.png" />
                                 <div class="game-card-title">Idle Breakout</div>
-                        </a><a aria-label="Play Jelly Truck" class="game-card" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLb4Q5os35HscDpPG-fu0f-OBef3y40-aV8Q&s"><img
-                                        alt="Jelly Truck thumbnail" loading="lazy" src="/images/classroom.png" />
+                        </a><a aria-label="Play Jelly Truck" class="game-card" href="/games/jelly-truck.html"><img
+                                        alt="Jelly Truck thumbnail" loading="lazy" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLb4Q5os35HscDpPG-fu0f-OBef3y40-aV8Q&s" />
                                 <div class="game-card-title">Jelly Truck</div>
                         </a><a aria-label="Play Jetpack Joyride" class="game-card"
                                 href="/games/jetpack-joyride.html"><img alt="Jetpack Joyride thumbnail" loading="lazy"
