--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 </script>
         <script defer="" src="/app.js"></script>
         <script defer="" src="/ads.js"></script>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L66STJG1MN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L66STJG1MN');
+</script>
 </head>
 
 <body>
