--- a/games/berryburyberry.html
+++ b/games/berryburyberry.html
@@ -1,29 +1,36 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Play BerryBuryBerry Online — Free Browser Game on Kidgas</title>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Play BerryBuryBerry Online – Free Browser Game | Kidgas</title>
+<link href="/assets/icons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+<link href="/site.webmanifest" rel="manifest"/>
+ <meta name="description" content="Play BerryBuryBerry online for free on Kidgas. Instant browser gameplay—no download. Learn controls, tips, and discover similar games." />
+<link rel="canonical" href="https://kidgas.com/games/berryburyberry.html" />
+<link href="/assets/icons/favicon-32.png" rel="icon" sizes="32x32" type="image/png"/>
+<link href="/assets/icons/favicon-16.png" rel="icon" sizes="16x16" type="image/png"/>
+<meta property="og:site_name" content="Kidgas"/>
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="BerryBuryBerry — Play Free Online on Kidgas"/>
+<meta property="og:description" content="Play BerryBuryBerry online for free on Kidgas. No download—instant browser play with tips, controls, and similar games."/>
+<meta property="og:url" content="https://kidgas.com/games/berryburyberry.html"/>
+<meta property="og:image" content="https://kidgas.com/images/berryburyberry.png"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="Play berryburyberry Online – Free Browser Game | Kidgas"/>
+<meta name="twitter:description" content="Play berryburyberry online for free on Kidgas. No download—instant browser play with tips, controls, and similar games."/>
+<link href="/style.css" rel="stylesheet"/>
+<script type="application/ld+json">
+{"@context": "https://schema.org", "@type": "VideoGame", "name": "berryburyberry ", "url": "https://kidgas.com/games/berryburyberry.html", "description": "Play berryburyberry online for free on Kidgas. No download—instant browser play with tips, controls, and similar games.", "inLanguage": "en"}
+</script>
+<script type="application/ld+json">
+{"@context": "https://schema.org", "@type": "WebSite", "name": "Kidgas", "url": "https://kidgas.com", "potentialAction": {"@type": "SearchAction", "target": "https://kidgas.com/search.html?q={search_term_string}", "query-input": "required name=search_term_string"}}
+</script>
+<script defer src="/app.js"></script>
+<script defer src="/ads.js"></script>
 
-  <!-- SEO -->
-  <meta name="description" content="Play BerryBuryBerry online for free on Kidgas. Instant browser gameplay—no download. Learn controls, tips, and discover similar games." />
-  <link rel="canonical" href="https://kidgas.com/games/berryburyberry.html" />
-  <meta name="robots" content="index,follow" />
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Kidgas" />
-  <meta property="og:title" content="BerryBuryBerry — Play Free Online on Kidgas" />
-  <meta property="og:description" content="Instant play in your browser. No download. Tips, controls, and similar games." />
-  <meta property="og:url" content="https://kidgas.com/games/berryburyberry.html" />
-  <meta property="og:image" content="https://kidgas.com/images/berryburyberry.png" />
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <!-- Favicons (keep your existing ones if you already have them) -->
-  <link rel="icon" href="/assets/favicon-32.png" sizes="32x32" />
-  <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" />
-
-  <link rel="stylesheet" href="/style.css" />
+ 
 
   <!-- JSON-LD: VideoGame -->
   <script type="application/ld+json">
