--- a/games/berryburyberry.html
+++ b/games/berryburyberry.html
@@ -109,7 +109,7 @@
 
   <section class="hero">
     <p class="kicker">Free Browser Game</p>
-    <h1>Berry Bury Berry<</h1>
+    <h1>Berry Bury Berry</h1>
     <p class="hero-sub">Play Berry Bury Berry online for free on Kidgas. No download—instant browser play with tips, controls, and similar games.</p>
   </section>
 
@@ -187,11 +187,11 @@
         <!-- Similar games with thumbnails (edit these later, or auto-generate from your DB) -->
         <div class="similar-grid">
           <a class="similar-card" href="/games/crossy-road.html">
-            <img src="/images/crossy-road.png" alt="Crossy Road thumbnail" loading="lazy" />
+            <img src="https://kidgas.com/images/crossyroad.png" alt="Crossy Road thumbnail" loading="lazy" />
             <span>Crossy Road</span>
           </a>
           <a class="similar-card" href="/games/cubes-2048.html">
-            <img src="/images/cubes-2048.png" alt="Cubes 2048 thumbnail" loading="lazy" />
+            <img src="https://kidgas.com/images/cubes2048.png" alt="Cubes 2048 thumbnail" loading="lazy" />
             <span>Cubes 2048</span>
           </a>
           <a class="similar-card" href="/games/cut-the-rope.html">
@@ -199,7 +199,7 @@
             <span>Cut The Rope</span>
           </a>
           <a class="similar-card" href="/games/block-blast.html">
-            <img src="/images/block-blast.png" alt="Block Blast thumbnail" loading="lazy" />
+            <img src="https://kidgas.com/images/cuttherope.png" alt="Block Blast thumbnail" loading="lazy" />
             <span>Block Blast</span>
           </a>
         </div>
