--- a/index.html
+++ b/index.html
@@ -130,10 +130,16 @@
         <main class="container">
                 <section class="poki-grid">
                         
+                       
                         <a aria-label="Play Awesome Tanks" class="game-card large" href="/games/awesome-tanks.html"><img
                                         alt="Awesome Tanks thumbnail" loading="lazy" src="/images/awesometanks.png" />
                                 <div class="game-card-title">Awesome Tanks</div>
-                        </a><a aria-label="Play Awesome Tanks 2" class="game-card"
+                        </a>
+                         <a aria-label="Play berry bury berry" class="game-card wide" href="https://kidgas.com/games/berryburyberry.html"><img
+                                        alt="berry bury berry thumbnail" loading="lazy" src="https://berryburyberry.com/assets/img/berryburyberry-2.jpg" />
+                                <div class="game-card-title">Awesome Tanks</div>
+                        </a> 
+                        <a aria-label="Play Awesome Tanks 2" class="game-card"
                                 href="/games/awesome-tanks-2.html"><img alt="Awesome Tanks 2 thumbnail" loading="lazy"
                                         src="/images/awesometanks2.png" />
                                 <div class="game-card-title">Awesome Tanks 2</div>
