--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </a>
                          <a aria-label="Play berry bury berry" class="game-card wide" href="https://kidgas.com/games/berryburyberry.html"><img
                                         alt="berry bury berry thumbnail" loading="lazy" src="https://berryburyberry.com/assets/img/berryburyberry-2.jpg" />
-                                <div class="game-card-title">Awesome Tanks</div>
+                                <div class="game-card-title">berry bury berry</div>
                         </a> 
                         <a aria-label="Play Awesome Tanks 2" class="game-card"
                                 href="/games/awesome-tanks-2.html"><img alt="Awesome Tanks 2 thumbnail" loading="lazy"
