--- a/games/berryburyberry.html
+++ b/games/berryburyberry.html
@@ -123,7 +123,7 @@
           </div>
           <button type="button" class="btn btn-primary" data-action="fullscreen" title="Fullscreen">Fullscreen</button>
         </div>
-        <iframe src="https://sciencemathedu.github.io/bigredbutton/" loading="lazy" allowfullscreen title="Big Red Button"></iframe>
+        <iframe src="https://tiny-brioche-ef46d6.netlify.app" loading="lazy" allowfullscreen title="Big Red Button"></iframe>
       </div>
 
       <div class="ad-slot in-article">
