--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <span class="icon">☰</span>
                         </button>
                         <a class="brand" href="/"><img alt="Kidgas" class="brand-logo"
-                                        src="/assets/brand/kidgas-logo.svg" /><span>Kidgas</span></a>
+                                        src="/assets/brand/logokidsgas1.png" /><span>Kidgas</span></a>
                         <form action="/search.html" autocomplete="off" class="search" role="search">
                                 <input aria-label="Search games" id="siteSearch" name="q"
                                         placeholder="Search among 100,000 games" type="search" />
